kube/templates/api-deployment-pr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: pr-${PR_NUMBER}
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: jesus6190/lunchbox_api:pr-${PR_NUMBER}
        ports:
        - containerPort: 8000

        readinessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 10
          failureThreshold: 5
          periodSeconds: 3

        livenessProbe:
          httpGet:
            path: /api/health
            port: 8000
          initialDelaySeconds: 15
          failureThreshold: 5
          periodSeconds: 3

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
