kube/templates/app-deployment-pr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: pr-${PR_NUMBER}
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: jesus6190/lunchbox_client:201
        ports:
        - containerPort: 4173

        readinessProbe:
          httpGet:
            path: /
            port: 4173
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 4173
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 3
        
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
