kube/templates/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pr-${PR_NUMBER}
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8000
