kube/templates/app-ingress-pr.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: pr-${PR_NUMBER}
  annotations:
spec:
  rules:
    - host: lunchbox6.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  app
                port:
                  number: 80
                  
          - path: /api
            pathType: Prefix
            backend:
              service:
                name:  api
                port:
                  number: 8090
          
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411

          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
